[package]
name = "vtflib"
description = "Safe wrapper for VTFLib."
version = "0.1.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lasa01/vtflib-rs/"
readme = "README.md"
keywords = ["vtflib", "vtf"]
categories = ["api-bindings", "multimedia::images"]
authors = ["Lassi Säike"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
static = ["vtflib-sys/static"]

[dependencies]
bitflags = "1.2.1"
vtflib-sys = "0.1.1"

[dev-dependencies]
serial_test = "0.5.1"
